tests/diagnostics/expressions/operators/equality_not_equal_mismatch/expect.txt
# exit: 1
input/lib.coppice:2:12: error: equality operators require same type
      return 1 != true
             ^
